--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <title>Bootstrap_Portfolio</title>
     <link rel="icon" href="assets/images/graffiti_d.jpg" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=IM+Fell+Double+Pica" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Sorts Mill Goudy' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css?family=Charm" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/reset.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
@@ -19,13 +22,10 @@
 <body>
     <div class="side-navBar">
         <div class="row">
-            <p class="quote">
-                "The quality of your work, in the long run, is the deciding factor on how much your services are valued
-                by the world."
-            </p>
-            <a href="#infoArea">H o m e</a>
-            <a href="#portfolioArea">P o r t f o l i o</a>
-            <a href="#contactArea">C o n t a c t</a>
+            <a id="navTop" href="#banner"><i class="fas fa-angle-double-up"></i></a>
+            <a id="nav" href="#infoArea">a b o u t</a>
+            <a id="nav" href="#portfolioArea">P o r t f o l i o</a>
+            <a id="nav" href="#contactArea">C o n t a c t</a>
             <a href="https://www.linkedin.com/in/don-wasinger-163a32173/" target="blank">
                 <img class="githubLink" src="assets/images/linkedInLogo.png" height="50" width="50" alt="linkedIn icon">
             </a>
@@ -35,41 +35,18 @@
         </div>
     </div>
     <div class="wrapper">
-        <div class="row banner">
-            <h1 class="bannerText">Don Wasinger</h1>
+        <div class="row banner" id="banner">
+            <h1 class="bannerText">W A S I N G E R / D O N</h1>
         </div>
         <div id="infoArea">
             <h2 class="title">About Me</h2>
-            <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade float-left photos" data-ride="carousel">
-                <div class="carousel-inner photos1">
-                    <div class="carousel-item active">
-                        <img src="assets/images/photo2.JPG" class="d-block w-100" alt="Don and Jackie with dogs">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="assets/images/MotoPhoto.jpg" class="d-block w-100" alt="Me on motorcycle">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="assets/images/DJandTruck.jpeg" class="d-block w-100" alt="Don, Jackie, Grandpa's Truck">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="assets/images/DWroyals.jpg" class="d-block w-100" alt="Don at Royals media room">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="assets/images/DJhiking.jpg" class="d-block w-100" alt="Don and Jackie hiking AZ">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="assets/images/motoPic.jpg" class="d-block w-100" alt="Don Tail of the Dragon">
-                    </div>
-                </div>
-            </div>
             <p class="aboutMe">
                 I grew up in Winona, Minnesota and graduated from the University of Kansas in 2012. I've served the
                 citizens of Overland Park as a police officer for the last 5 years. During that time, I received
                 several merit-based awards and commendations, including being named Officer of the Quarter in 2018.
                 <br>
                 <br>
-                In my spare time I enjoy working with my wife, Jackie, to remodel our 92-year-old <a href="https://www.instagram.com/flint.street_farmhouse/"
-                    target="blank">fixer-upper home</a>,
+                In my spare time I enjoy working with my wife, Jackie, to remodel our 92-year-old fixer-upper home,
                 riding my motorcycle, and spending time outdoors hunting, hiking, or walking our two dogs, Riften
                 and Rosie.
                 <br>
@@ -88,9 +65,11 @@
                 Please explore my website and view my Portfolio. You can also jump to my LinkedIn profile or Github via
                 the
                 icons.
-                Enter your contact info and I will get back to you right away. Thanks for visiting!
+                Enter your contact info and I will get back to you right away. Thank you for visiting.
+                <br>
+                <br>
+                ~ D. Wasinger
             </p>
-            <br>
         </div>
 
         <div class="portfolioArea" id="portfolioArea">
@@ -170,8 +149,7 @@
 
         <div class="contactArea" id="contactArea">
             <div class="container form">
-                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfrjpMd0qhJ8iOWHpPXNjyNarQRcmgLfUuEcActPRi20ScDTg/viewform?embedded=true"
-                    width="640" height="929" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfrjpMd0qhJ8iOWHpPXNjyNarQRcmgLfUuEcActPRi20ScDTg/viewform?embedded=true" width="400" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
             </div>
         </div>
 
