--- a/index.html
+++ b/index.html
@@ -26,12 +26,14 @@
             <a id="nav" href="#infoArea">a b o u t</a>
             <a id="nav" href="#portfolioArea">P o r t f o l i o</a>
             <a id="nav" href="#contactArea">C o n t a c t</a>
+            <a id="nav" href="assets/DonWasingerResume_.pdf" target="_blank">R e s u m é <i id="downL" class="fas fa-file-download"></i></a>
             <a href="https://www.linkedin.com/in/don-wasinger-163a32173/" target="blank">
                 <img class="githubLink" src="assets/images/linkedInLogo.png" height="50" width="50" alt="linkedIn icon">
             </a>
             <a href="https://github.com/djwasing" target="blank">
                 <img class="githubLink" src="assets/images/githubImg.png" height="50" width="50" alt="github icon">
             </a>
+
         </div>
     </div>
     <div class="wrapper">
@@ -88,6 +90,7 @@
                                 <h5 class="card-title">Scout Project</h5>
                                 <p class="card-text">App compares Uber and Lyft prices using ajax calls and jQuery.</p>
                                 <a href="https://djwasing.github.io/Scout-Project-App/" target="blank" class="btn btn-lg">Open</a>
+                                <a href="https://github.com/djwasing/Scout-Project-App" target="blank" class="btn btn-lg">GitHub</a>
                             </div>
                         </div>
                     </div>
@@ -99,6 +102,7 @@
                                 <h5 class="card-title">Train Schedule App</h5>
                                 <p class="card-text">Live database train schedule app using moment.js and Firebase.</p>
                                 <a href="https://djwasing.github.io/TrainSchedule/" target="blank" class="btn btn-lg">Open</a>
+                                <a href="https://github.com/djwasing/TrainSchedule" target="blank" class="btn btn-lg">GitHub</a>
                             </div>
                         </div>
                     </div>
@@ -110,6 +114,7 @@
                                 <h5 class="card-title">Trivia Game</h5>
                                 <p class="card-text">jQuery trivia game with The Office theme.</p>
                                 <a href="https://djwasing.github.io/TriviaGame/" target="blank" class="btn btn-lg">Open</a>
+                                <a href="https://github.com/djwasing/TriviaGame" target="blank" class="btn btn-lg">GitHub</a>
                             </div>
                         </div>
                     </div>
@@ -123,6 +128,7 @@
                                 <h5 class="card-title">Lord of the Rings RPG</h5>
                                 <p class="card-text">jQuery battle card game with a Lord of the Rings theme.</p>
                                 <a href="https://djwasing.github.io/unit-4-game/" target="blank" class="btn btn-lg">Open</a>
+                                <a href="https://github.com/djwasing/unit-4-game" target="blank" class="btn btn-lg">GitHub</a>
                             </div>
                         </div>
                     </div>
@@ -134,6 +140,7 @@
                                 <h5 class="card-title">Hangman Game</h5>
                                 <p class="card-text">JavaScript word guessing game with a country music theme.</p>
                                 <a href="https://djwasing.github.io/Word_Guess_Game/" target="blank" class="btn btn-lg">Open</a>
+                                <a href="https://github.com/djwasing/Word_Guess_Game" target="blank" class="btn btn-lg">GitHub</a>
                             </div>
                         </div>
                     </div>
@@ -145,6 +152,7 @@
                                 <h5 class="card-title">Giphy Search App</h5>
                                 <p class="card-text">Ajax call to Giphy API and jQuery for dynamic creation.</p>
                                 <a href="https://djwasing.github.io/Giphy-Search-App/" target="blank" class="btn btn-lg">Open</a>
+                                <a href="https://github.com/djwasing/Giphy-Search-App" target="blank" class="btn btn-lg">GitHub</a>
                             </div>
                         </div>
                     </div>
