--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         <div class="card card2" style="width: 18rem;">
                             <img class="card-img-top" id="dogImg" src="assets/images/dogPhoto.jpg" alt="Card image cap">
                             <div class="card-body">
-                                <h5 class="card-title">Hangman Game</h5>
+                                <h5 class="card-title">Hangman Game (Node.js)</h5>
                                 <p class="card-text">Node.js word guessing app with a dog theme.</p>
                                 <!-- <a href="https://djwasing.github.io/Word_Guess_Game/" target="blank" class="btn btn-lg">Open</a> -->
                                 <a href="https://github.com/djwasing/Node-Word-Guess" target="blank" class="btn btn-lg">GitHub</a>
@@ -147,7 +147,7 @@
 
                     <div class="col-md-4">
                         <div class="card card2" style="width: 18rem;">
-                            <img class="card-img-top" id="apiImage" src="assets/images/apiImage.png" alt="Card image cap">
+                            <img class="card-img-top" id="apiImage" src="assets/images/shoppingCart.jpg" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">Node/MySQL Shop App</h5>
                                 <p class="card-text">Node.js app that utilizes MySQL database.</p>
@@ -157,6 +157,46 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="card card2" style="width: 18rem;">
+                            <img class="card-img-top" id="policeImg" src="assets/images/apiImage.png" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">Giphy Search App</h5>
+                                <p class="card-text">jQuery and ajax used to get still GIFs from Giphy API. Click to start motion GIFs.</p>
+                                <a href="https://djwasing.github.io/Giphy-Search-App/" target="blank" class="btn btn-lg">Open</a>
+                                <a href="https://github.com/djwasing/Giphy-Search-App" target="blank" class="btn btn-lg">GitHub</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="card card2" style="width: 18rem;">
+                            <img class="card-img-top" id="dogImg" src="assets/images/nodejs-512.png" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">"Liri" Node.js Search App</h5>
+                                <p class="card-text">Node.js app using 3 different APIs to search for info on concerts, movies, and music.</p>
+                                <!-- <a href="https://djwasing.github.io/Word_Guess_Game/" target="blank" class="btn btn-lg">Open</a> -->
+                                <a href="https://github.com/djwasing/Liri-Node-App" target="blank" class="btn btn-lg">GitHub</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="card card2" style="width: 18rem;">
+                            <img class="card-img-top" id="apiImage" src="assets/images/CountryMusic.jpg" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">Hangman Game (JS)</h5>
+                                <p class="card-text">JavaScript hangman-style game with a country music theme. </p>
+                                <!-- <a href="" target="blank" class="btn btn-lg">Open</a> -->
+                                <a href="https://djwasing.github.io/Word_Guess_Game/" target="blank" class="btn btn-lg">Open</a>
+                                <a href="https://github.com/djwasing/Word_Guess_Game" target="blank" class="btn btn-lg">GitHub</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
 
